UnsafeIntrinsicsTest only use ZVerifyOops in debug